intel/bench_214_work/extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main/log.txt
bench_214_work/extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main/extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214_work/extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main/extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main.c:36:27: error: cannot initialize a variable of type 'struct tc_configuration *' with an rvalue of type 'void *'
        struct tc_configuration *src = NULL;
                                 ^     ~~~~
bench_214_work/extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main/extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main.c:37:27: error: cannot initialize a variable of type 'struct tc_configuration *' with an rvalue of type 'void *'
        struct tc_configuration *dst = NULL;
                                 ^     ~~~~
3 errors generated.
HLS FPGA Parse FAILED.
